cmake_minimum_required(VERSION 3.10)

# Examples directory - this can be expanded to include example code as needed
message(STATUS "Configuring examples directory")

# Add any example targets here if needed
# For example:
# add_executable(example_parser example_parser.c)
# target_link_libraries(example_parser scopemux-core)
